style(images): :art: add images for description

--- a/campaign.html
+++ b/campaign.html
@@ -117,10 +117,21 @@
               amount, please write us at juegacomocampeon@gmail.com
             </p>
 
-            <div style="width: 100%; display: flex; justify-content: center">
+            <div style="width: 100%; display: flex; position: relative; margin: 50px 0;">
+              <img
+                src="img/basketball court.jpeg"
+                style="width: 40%;border: 3px black solid; transform: rotate(-10deg); position: absolute; left: -5px; top: 30px;"
+                alt="Bilingual Sports Academy"
+              />
+
+              <img
+                src="img/basketball child.jpeg"
+                style="width: 20%; border: 3px black solid; margin: 0 auto; position: relative; z-index: 1;"
+                alt="Bilingual Sports Academy"
+              />
               <img
                 src="img/picture gallery 10.png"
-                style="width: 95%; border: 3px gray solid"
+                style="width: 40%; border: 3px black solid; transform: rotate(-25deg); position: absolute; right: -5px; top: 30px;"
                 alt="Bilingual Sports Academy"
               />
             </div>
