change border width 3 to 1 of images

--- a/campaign.html
+++ b/campaign.html
@@ -118,18 +118,18 @@
             <div style="width: 100%; display: flex; position: relative; margin: 50px 0;">
               <img
                 src="img/basketball court.jpeg"
-                style="width: 40%;border: 3px black solid; transform: rotate(-10deg); position: absolute; left: -5px; top: 30px;"
+                style="width: 40%;border: 1cm black solid; transform: rotate(-10deg); position: absolute; left: -5px; top: 30px;"
                 alt="Bilingual Sports Academy"
               />
 
               <img
                 src="img/basketball child.jpeg"
-                style="width: 20%; border: 3px black solid; margin: 0 auto; position: relative; z-index: 1;"
+                style="width: 20%; border: 1px black solid; margin: 0 auto; position: relative; z-index: 1;"
                 alt="Bilingual Sports Academy"
               />
               <img
                 src="img/picture gallery 10.png"
-                style="width: 40%; border: 3px black solid; transform: rotate(-25deg); position: absolute; right: -5px; top: 30px;"
+                style="width: 40%; border: 1px black solid; transform: rotate(-25deg); position: absolute; right: -5px; top: 30px;"
                 alt="Bilingual Sports Academy"
               />
             </div>
