--- a/campaign.html
+++ b/campaign.html
@@ -118,7 +118,7 @@
             <div style="width: 100%; display: flex; position: relative; margin: 50px 0;">
               <img
                 src="img/basketball court.jpeg"
-                style="width: 40%;border: 1cm black solid; transform: rotate(-10deg); position: absolute; left: -5px; top: 30px;"
+                style="width: 40%;border: 1px black solid; transform: rotate(-10deg); position: absolute; left: -5px; top: 30px;"
                 alt="Bilingual Sports Academy"
               />
 
