refactor: :sparkles: update description text

--- a/campaign.html
+++ b/campaign.html
@@ -74,25 +74,23 @@
         <h3 class="grid-title">LET'S BUILD A HOOPS COURT !</h3>
         <div>
           <p>
-            By clicking on one of the balls below, you'll be making a donation
-            in that amount to support Juega Como Campeon (JCC) and positively
-            impact the lives of underprivileged Dominican youth where we
-            stress educational reinforcement, athletic excellence, gratitude,
-            community service, integrity and personal responsibility.
+            By clicking on one of the balls below, you'll be making a donation in that amount to support Juega Como
+            Campeon (JCC) and positively impact the lives of underprivileged Dominican youth to whom JCC engages in
+            educational reinforcement (primarily English), athletic excellence, gratitude, community service, integrity
+            and personal responsibility.
+
           </p>
 
           <p>
-            We have received the go ahead from the local sports ministry in
-            Puerto Plata that we can build a basketball court on their land to
-            be used daily by our student athletes. We just need the added
-            funds to do it. So please spread the word (and this link) to your
-            groups and invite them to consider JCC to be a part of their
-            philanthropy this Christmas season.
+            We have received final approval from the local sports ministry in Puerto Plata granting JCC permission to
+            install fixed backboards with rims on their land. This will provide JCC with a more stable home for daily
+            practice. We just need the added funds to proceed. So please consider spreading the word (and this link) to
+            your groups and invite them to consider JCC to be a part of their philanthropy this Christmas season.
           </p>
 
           <p>
-            And if you feel inclined to give more than the corresponding
-            amount, please write us at juegacomocampeon@gmail.com
+            And if you feel inclined to give more than the corresponding amount, please write us at
+            juegacomocampeon@gmail.com
           </p>
 
           <div style="
@@ -234,7 +232,7 @@
           </div>
         </div>
         <div class="grid">
-          <div class="grid-item basketball" data-price="40" >
+          <div class="grid-item basketball" data-price="40">
             <div class="item-price">$40</div>
           </div>
           <div class="grid-item basketball" data-price="40">
