refactor(name): :art: add another donator name

--- a/campaign.html
+++ b/campaign.html
@@ -483,8 +483,11 @@
                 <div class="toolttext">MIKE HENN</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div class="grid-item golf grayout" data-price="100" data-name="TIMOTHY BRENNAN">
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">TIMOTHY BRENNAN</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
