feat(name): :art: upgrade names

--- a/campaign.html
+++ b/campaign.html
@@ -273,8 +273,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item basketball" data-price="40">
+            <div
+              class="grid-item basketball grayout"
+              data-price="40"
+              data-name="KITTY DUFFY"
+            >
               <div class="item-price">$40</div>
+              <div class="tool">
+                <div class="toolttext">KITTY DUFFY</div>
+              </div>
             </div>
             <div class="grid-item basketball" data-price="40">
               <div class="item-price">$40</div>
@@ -316,8 +323,15 @@
                 <div class="toolttext">TOM ECK</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="50">
+            <div
+              class="grid-item golf grayout"
+              data-price="50"
+              data-name="LISA REVORD"
+            >
               <div class="item-price">$50</div>
+              <div class="tool">
+                <div class="toolttext">LISA REVORD</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="50">
               <div class="item-price">$50</div>
@@ -483,14 +497,25 @@
                 <div class="toolttext">MIKE HENN</div>
               </div>
             </div>
-            <div class="grid-item golf grayout" data-price="100" data-name="TIMOTHY BRENNAN">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="TIMOTHY BRENNAN"
+            >
               <div class="item-price">$100</div>
               <div class="tool">
                 <div class="toolttext">TIMOTHY BRENNAN</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="JIMMY McCARTHY"
+            >
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">JIMMY McCARTHY</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
