lint: prettier fix

--- a/donate.html
+++ b/donate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -104,7 +104,7 @@
       <!-- data-embed-id="52895" -->
       <!-- data-embed="https://secure.qgiv.com/for/juecomcamin/embed/1016334/" -->
       <div
-      data-qgiv-embed="true"
+        data-qgiv-embed="true"
         class="qgiv-embed-container"
         data-embed-id="1016334"
         data-embed="https://secure.qgiv.com/for/gridcampaign/embed/1016334"
