refactor(donators): :art: update names

--- a/campaign.html
+++ b/campaign.html
@@ -169,11 +169,25 @@
         <br />
         <article class="grid-container">
           <div class="grid" id="grid">
-            <div class="grid-item americanball" data-price="10">
+            <div
+              class="grid-item americanball grayout"
+              data-price="10"
+              data-name="JOE SEIGERT"
+            >
               <div class="item-price">$10</div>
+              <div class="tool">
+                <div class="toolttext">JOE SEIGERT</div>
+              </div>
             </div>
-            <div class="grid-item americanball" data-price="10">
+            <div
+              class="grid-item americanball grayout"
+              data-price="10"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$10</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item americanball" data-price="10">
               <div class="item-price">$10</div>
@@ -212,8 +226,15 @@
                 <div class="toolttext">KEVIN WHITESIDE</div>
               </div>
             </div>
-            <div class="grid-item tennis" data-price="20">
+            <div
+              class="grid-item tennis grayout"
+              data-price="20"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$20</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item tennis" data-price="20">
               <div class="item-price">$20</div>
@@ -241,8 +262,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item football" data-price="30">
+            <div
+              class="grid-item football grayout"
+              data-price="30"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$30</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item football" data-price="30">
               <div class="item-price">$30</div>
@@ -283,8 +311,15 @@
                 <div class="toolttext">KITTY DUFFY</div>
               </div>
             </div>
-            <div class="grid-item basketball" data-price="40">
+            <div
+              class="grid-item basketball grayout"
+              data-price="40"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$40</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item basketball" data-price="40">
               <div class="item-price">$40</div>
@@ -333,8 +368,15 @@
                 <div class="toolttext">LISA REVORD</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="50">
+            <div
+              class="grid-item golf grayout"
+              data-price="50"
+              data-name="KEVIN CARROL"
+            >
               <div class="item-price">$50</div>
+              <div class="tool">
+                <div class="toolttext">KEVIN CARROL</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="50">
               <div class="item-price">$50</div>
@@ -359,8 +401,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item americanball" data-price="60">
+            <div
+              class="grid-item americanball grayout"
+              data-price="60"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$60</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item americanball" data-price="60">
               <div class="item-price">$60</div>
@@ -391,8 +440,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item tennis" data-price="70">
+            <div
+              class="grid-item tennis grayout"
+              data-price="70"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$70</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item tennis" data-price="70">
               <div class="item-price">$70</div>
@@ -423,8 +479,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item football" data-price="80">
+            <div
+              class="grid-item football grayout"
+              data-price="80"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$80</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item football" data-price="80">
               <div class="item-price">$80</div>
@@ -455,8 +518,15 @@
             </div>
           </div>
           <div class="grid">
-            <div class="grid-item basketball" data-price="90">
+            <div
+              class="grid-item basketball grayout"
+              data-price="90"
+              data-name="BARBARA TRAVERS"
+            >
               <div class="item-price">$90</div>
+              <div class="tool">
+                <div class="toolttext">BARBARA TRAVERS</div>
+              </div>
             </div>
             <div class="grid-item basketball" data-price="90">
               <div class="item-price">$90</div>
@@ -517,8 +587,15 @@
                 <div class="toolttext">JIMMY McCARTHY</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="CHARLIE CUOMO"
+            >
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">CHARLIE CUOMO</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
