--- a/campaign.html
+++ b/campaign.html
@@ -189,8 +189,15 @@
                 <div class="toolttext">BARBARA TRAVERS</div>
               </div>
             </div>
-            <div class="grid-item americanball" data-price="10">
+            <div
+              class="grid-item americanball grayout"
+              data-price="10"
+              data-name="MARY PAT SADDLER"
+            >
               <div class="item-price">$10</div>
+              <div class="tool">
+                <div class="toolttext">MARY PAT SADDLER</div>
+              </div>
             </div>
             <div class="grid-item americanball" data-price="10">
               <div class="item-price">$10</div>
@@ -625,14 +632,35 @@
                 <div class="toolttext">CHARLIE CUOMO</div>
               </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="RACHEL DOUGHERTY HENDRICKS"
+            >
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">RACHEL DOUGHERTY HENDRICKS</div>
+              </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="SARAH DAU"
+            >
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">SARAH DAU</div>
+              </div>
             </div>
-            <div class="grid-item golf" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="JANE ELLIS"
+            >
               <div class="item-price">$100</div>
+              <div class="tool">
+                <div class="toolttext">JANE ELLIS</div>
+              </div>
             </div>
             <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
