--- a/campaign.html
+++ b/campaign.html
@@ -660,15 +660,8 @@
                 <div class="toolttext">JANE ELLIS</div>
               </div>
             </div>
-            <div
-              class="grid-item golf grayout"
-              data-price="100"
-              data-name="JANE ELLIS"
-            >
+            <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
-              <div class="tool">
-                <div class="toolttext">JANE ELLIS</div>
-              </div>
             </div>
             <div class="grid-item golf" data-price="100">
               <div class="item-price">$100</div>
