--- a/campaign.html
+++ b/campaign.html
@@ -571,10 +571,18 @@
               </div>
             </div>
             <div class="grid-item basketball" data-price="90">
-              <div class="item-price">$90</div>
+              <div class="item-price">$90
+
+
+
+
+              </div>
             </div>
             <div class="grid-item basketball" data-price="90">
-              <div class="item-price">$90</div>
+              <div class="item-price">$90
+
+                
+              </div>
             </div>
             <div class="grid-item basketball" data-price="90">
               <div class="item-price">$90</div>
