chore: revert test whitespace

--- a/campaign.html
+++ b/campaign.html
@@ -571,16 +571,10 @@
               </div>
             </div>
             <div class="grid-item basketball" data-price="90">
-              <div class="item-price">$90
-
-
-              </div>
+              <div class="item-price">$90</div>
             </div>
             <div class="grid-item basketball" data-price="90">
-              <div class="item-price">$90
-
-
-              </div>
+              <div class="item-price">$90</div>
             </div>
             <div class="grid-item basketball" data-price="90">
               <div class="item-price">$90</div>
