fix: linting and add missing data-name attr for TB

--- a/campaign.html
+++ b/campaign.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -243,7 +243,11 @@
                 <div class="toolttext">BARBARA TRAVERS</div>
               </div>
             </div>
-            <div class="grid-item tennis grayout" data-price="20" data-name="ANDREW HAMMER">
+            <div
+              class="grid-item tennis grayout"
+              data-price="20"
+              data-name="ANDREW HAMMER"
+            >
               <div class="item-price">$20</div>
               <div class="tool">
                 <div class="toolttext">ANDREW HAMMER</div>
@@ -663,7 +667,11 @@
                 <div class="toolttext">JANE ELLIS</div>
               </div>
             </div>
-            <div class="grid-item golf grayout" data-price="100">
+            <div
+              class="grid-item golf grayout"
+              data-price="100"
+              data-name="TOMMY BAINBRIDGE"
+            >
               <div class="item-price">$100</div>
               <div class="tool">
                 <div class="toolttext">TOMMY BAINBRIDGE</div>
