chore: add Drew Hall $20

--- a/campaign.html
+++ b/campaign.html
@@ -253,8 +253,15 @@
                 <div class="toolttext">ANDREW HAMMER</div>
               </div>
             </div>
-            <div class="grid-item tennis" data-price="20">
+            <div
+              class="grid-item tennis grayout"
+              data-price="20"
+              data-name="DREW HALL"
+            >
               <div class="item-price">$20</div>
+              <div class="tool">
+                <div class="toolttext">DREW HALL</div>
+              </div>
             </div>
             <div class="grid-item tennis" data-price="20">
               <div class="item-price">$20</div>
