--- a/donate.html
+++ b/donate.html
@@ -54,7 +54,9 @@
             <li class="nav-item">
               <a class="nav-link" href="campaign.html">Campaign</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="henn-campaign.html">Henn Family Campaign</a>
+            </li>
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
