--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
               <a class="nav-link" href="campaign.html">Campaign</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="henn-campaign.html">Henn Family Campaign</a>
+              <a class="nav-link" href="henn-campaign.html"
+                >Henn Family Campaign</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
