feat: replace iframe with henn campaign video w/ controls

--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -175,13 +175,7 @@
               <p class="grid-title" style="font-weight: bold">
                 WATCH THIS VIDEO
               </p>
-              <iframe
-                width="100%"
-                height="315"
-                src="https://www.youtube.com/embed/oBnwL4xGV0s"
-                frameborder="0"
-                allowfullscreen
-              ></iframe>
+              <video src="/henn-campaign.mp4" width="100%" controls></video>
             </div>
           </div>
         </article>
