--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -175,7 +175,9 @@
               <p class="grid-title" style="font-weight: bold">
                 WATCH THIS VIDEO
               </p>
-              <video src="./henn-campaign.mp4" width="100%" controls></video>
+              <video width="100%" controls>
+                <source src="./henn-campaign.mp4" type="video/mp4" />
+              </video>
             </div>
           </div>
         </article>
