fix: update video src w/ relative path

--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -175,7 +175,7 @@
               <p class="grid-title" style="font-weight: bold">
                 WATCH THIS VIDEO
               </p>
-              <video src="/henn-campaign.mp4" width="100%" controls></video>
+              <video src="./henn-campaign.mp4" width="100%" controls></video>
             </div>
           </div>
         </article>
