fix: move assets to video dir to avoid namespace issue

--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -176,7 +176,7 @@
                 WATCH THIS VIDEO
               </p>
               <video width="100%" controls>
-                <source src="./henn-campaign.mp4" type="video/mp4" />
+                <source src="./video/henn-campaign.mp4" type="video/mp4" />
               </video>
             </div>
           </div>
