--- a/campaign.html
+++ b/campaign.html
@@ -166,6 +166,21 @@
                 alt="Bilingual Sports Academy"
               />
             </div>
+            <div>
+              <p class="grid-title" style="font-weight: bold">
+                WATCH THIS VIDEO
+              </p>
+              <iframe
+                width="100%"
+                height="100%"
+                style="aspect-ratio: 16/9"
+                src="https://www.youtube.com/embed/EFnhr3qJUYs?si=hFz2zjty9_v7DBzG"
+                title="Henn Family Campaign"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </article>
 
