chore: add mising "to" on description text

--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -110,7 +110,7 @@
             <p>
               For every ball below that you sponsor, the HENN FAMILY will match
               your donation and add a ball of its own. You can list your name or
-              that of a loved one on the ball or choose remain Anonymous. We
+              that of a loved one on the ball or choose to remain Anonymous. We
               will name on ours people who positively inspired us in some way.
             </p>
 
