--- a/henn-campaign.html
+++ b/henn-campaign.html
@@ -175,7 +175,14 @@
               <p class="grid-title" style="font-weight: bold">
                 WATCH THIS VIDEO
               </p>
-              <iframe
+              <video
+                src="./video/henn-campaign.mp4"
+                controls
+                width="100%"
+                height="100%"
+                style="aspect-ratio: 16/9"
+              ></video>
+              <!-- <iframe
                 width="100%"
                 height="100%"
                 style="aspect-ratio: 16/9"
@@ -184,7 +191,7 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
-              ></iframe>
+              ></iframe> -->
             </div>
           </div>
         </article>
