--- a/campaign.html
+++ b/campaign.html
@@ -170,16 +170,13 @@
               <p class="grid-title" style="font-weight: bold">
                 WATCH THIS VIDEO
               </p>
-              <iframe
+              <video
+                src="./video/henn-campaign.mp4"
+                controls
                 width="100%"
                 height="100%"
                 style="aspect-ratio: 16/9"
-                src="https://www.youtube.com/embed/EFnhr3qJUYs?si=hFz2zjty9_v7DBzG"
-                title="Henn Family Campaign"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
+              ></video>
             </div>
           </div>
         </article>
