feat: move/update kevin kennedy to emeritus campeon

--- a/index.html
+++ b/index.html
@@ -334,60 +334,6 @@
                 <div class="card-header">
                   <img
                     class="card-img"
-                    src="/img/kevin-kennedy.png"
-                    alt="Kevin Kennedy's Headshot"
-                  />
-                  <h5 class="text-center">Kevin Kennedy</h5>
-                </div>
-                <!-- /card-header-->
-                <div class="card-content">
-                  <p>
-                    Kevin Kennedy lives in Indianapolis, Indiana and is the VP
-                    Marketing & Professional Services for Marketpath, Inc.
-                    focusing primarily on the company's strategic direction,
-                    branding, and partner channels. Kevin brings a unique
-                    perspective on organizational strategy, and both traditional
-                    and interactive marketing, based on his current position and
-                    previous leadership roles with Delta Faucet Company as
-                    Director of E-Business and Director of Interactive
-                    Marketing. Kevin graduated with a BBA in Finance from the
-                    University of Notre Dame and received his MBA from Eastern
-                    Michigan University.
-                  </p>
-                  <p>
-                    Outside of his business career, Kevin has a passion for
-                    charitable organizations that support children, especially
-                    kids that don’t have the economic and community Kevin grew
-                    up with. In additionto his involvement with Juega Como
-                    Campeon, Kevin is also on the board of
-                    <a href="https://www.childrenstheraplay.org/"
-                      >The Children's TherAplay Foundation</a
-                    >
-                    and is actively involved with
-                    <a href="https://www.theoaksacademy.org/"
-                      >The Oaks Academy</a
-                    >.
-                  </p>
-                  <p>
-                    Kevin and his wife, Bridget, have five children that are his
-                    true love. In his spare time, Kevin spends time with his
-                    family, coaches and participates in various sports
-                    (basketball, tennis, golf, running), and enjoys reading and
-                    watching a good movie . He also enjoys travel and having a
-                    good beer or wine with friends.
-                  </p>
-                </div>
-                <!-- /card-content -->
-              </div>
-              <!-- /card-body-->
-            </div>
-            <!-- card -->
-
-            <div class="card mx-auto">
-              <div class="card-body">
-                <div class="card-header">
-                  <img
-                    class="card-img"
                     src="img/thomas-eck.jpeg"
                     alt="Thomas Eck's Headshot"
                   />
@@ -538,6 +484,61 @@
                   Dan Brennan was a founding board member and actively served
                   from 2017-2021.
                 </p>
+              </div>
+              <!-- /card-content -->
+            </div>
+            <!-- /card-body-->
+          </div>
+
+          <div class="card mx-auto">
+            <div class="card-body">
+              <div class="card-header">
+                <img
+                  class="card-img"
+                  src="/img/kevin-kennedy.png"
+                  alt="Kevin Kennedy's Headshot"
+                />
+                <h5 class="text-center">Kevin Kennedy</h5>
+                <h6>EMERITUS CAMPEON</h6>
+              </div>
+              <!-- /card-header-->
+              <div class="card-content">
+                <p>
+                  Kevin Kennedy lives in Indianapolis, Indiana and is the VP
+                  Marketing & Professional Services for Marketpath, Inc.
+                  focusing primarily on the company's strategic direction,
+                  branding, and partner channels. Kevin brings a unique
+                  perspective on organizational strategy, and both traditional
+                  and interactive marketing, based on his current position and
+                  previous leadership roles with Delta Faucet Company as
+                  Director of E-Business and Director of Interactive Marketing.
+                  Kevin graduated with a BBA in Finance from the University of
+                  Notre Dame and received his MBA from Eastern Michigan
+                  University.
+                </p>
+                <p>
+                  Outside of his business career, Kevin has a passion for
+                  charitable organizations that support children, especially
+                  kids that don’t have the economic and community Kevin grew up
+                  with. In additionto his involvement with Juega Como Campeon,
+                  Kevin is also on the board of
+                  <a href="https://www.childrenstheraplay.org/"
+                    >The Children's TherAplay Foundation</a
+                  >
+                  and is actively involved with
+                  <a href="https://www.theoaksacademy.org/">The Oaks Academy</a
+                  >.
+                </p>
+                <p>
+                  Kevin and his wife, Bridget, have five children that are his
+                  true love. In his spare time, Kevin spends time with his
+                  family, coaches and participates in various sports
+                  (basketball, tennis, golf, running), and enjoys reading and
+                  watching a good movie . He also enjoys travel and having a
+                  good beer or wine with friends.
+                </p>
+
+                <p>Kevin served on the Board of JCC from 2018 to 2023.</p>
               </div>
               <!-- /card-content -->
             </div>
