chore: update footer location to Puerto Plata

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <div class="row">
           <div class="col">
             <h3>Dominican Republic Office</h3>
-            <h4>Santo Domingo, Dominican Republic</h4>
+            <h4>Puerto Plata, Dominican Republic</h4>
             <p>
               Email:
               <a href="mailto:juegacomocampeon@gmail.com"
