feat: update volunteer section copy

--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
             in Santo Domingo. We will certainly assist them with housing options
             (which are extremely affordable) as well as orienting them to life
             here (transportation, phone, local laws and pitfalls, food,
-            nightlife, medical, places of interest, etc…). To give an idea of
-            the total monthly cost of a volunteer, it would be hard to spend
-            $1,000 per month and can certainly be accomplished for $500.
+            nightlife, medical, places of interest, etc…). For an idea of the
+            total monthly cost of living in the DR for a volunteer, a fair
+            estimate would be approximately $1000.
           </p>
         </article>
 
