feat: add virtual english program section

--- a/index.html
+++ b/index.html
@@ -267,6 +267,14 @@
             conjunction with academic support in english and math, for
             disadvantaged boys and girls.
           </p>
+          <p><strong>Virtual English Program</strong></p>
+          <p>
+            JCC has a 6 Level virtual English program to serve Dominicans of ALL
+            ages throughout the country. Each Level lasts 10 weeks (5
+            hours/week) and aims to teach and/or polish the student's English
+            and better prepare them for economic opportunities here and abroad.
+          </p>
+
           <p><strong>Program Details</strong></p>
           <p>
             JCC is based on baiting children into fun learning. Obviously we
