feat: add mike henn to board members

--- a/index.html
+++ b/index.html
@@ -340,6 +340,49 @@
               <div class="card-body">
                 <div class="card-header">
                   <img
+                    src="img/mike-henn.jpg"
+                    alt="Mike Henn's headshot"
+                    class="card-img"
+                  />
+                  <h5>Mike Henn</h5>
+                </div>
+
+                <div class="card-content">
+                  <p>
+                    Mike Henn lives in Wilmette, Illinois and is the managing
+                    member of Ephemeris Capital, an investment management and
+                    advisory company focused on middle market private equity and
+                    debt investments. Prior to Ephemeris Capital, Mike had a
+                    twenty-five year career in public accounting and as an
+                    operational and strategically oriented CFO. Mike brings a
+                    passion for helping kids and solving problems to JCC. Mike
+                    graduated with a BBA in Accountancy from the University of
+                    Notre Dame and received his MBA from the University of
+                    Chicago (Corporate Finance and Strategy).
+                  </p>
+                  <p>
+                    Outside of his professional interests, Mike is active in his
+                    local catholic school and parish, having served on its
+                    Finance Committee, School Board and in various other roles.
+                    In addition to his involvement with Juega Como Campeon, Mike
+                    has been involved with a rural school in Haiti for the last
+                    ten years where he led the funding and construction of the
+                    school campus in 2018 and which currently educates 200 kids.
+                  </p>
+                  <p>
+                    In his spare time, Mike is an avid paddle tennis player and
+                    enjoys spending time with his two teenage sons. He also
+                    enjoys travel, cheering for Notre Dame and a bit of good
+                    bourbon with friends.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="card mx-auto">
+              <div class="card-body">
+                <div class="card-header">
+                  <img
                     class="card-img"
                     src="img/thomas-eck.jpeg"
                     alt="Thomas Eck's Headshot"
@@ -347,6 +390,7 @@
                   <h5 class="text-center">Thomas Eck</h5>
                 </div>
                 <!-- /card-header-->
+
                 <div class="card-content">
                   <p>
                     Thomas Eck, CFA lives in Whitefish Bay, Wisconsin and is a
